--- a/public/css/janken.css
+++ b/public/css/janken.css
@@ -221,3 +221,59 @@ button[disabled] {
     font-size: 2em;
     margin-top: 20px;
 }
+
+.Login, .loginSubmits {
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+
+.loginSubmits button {
+    min-width: 300px;
+    height: 50px;
+    margin: 10px 35px 30px 35px;
+    cursor: pointer;
+    font-size: 30px;
+    font-family: 'Nova Square', cursive;
+    outline: none;
+    color: white;
+    background-color: green;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 5px 5px lightgrey;
+}
+
+.loginSubmits button:active {
+    background-color: darkgreen;
+    box-shadow: 2px 2px darkgrey;
+    transform: translateY(3px);
+}
+
+.loginInput input {
+    width: 155px;
+    height: 30px;
+    margin: 10px;
+    display: block;
+    font-family: 'Nova Square', cursive;
+    text-align: center;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+
+.loginInput label {
+    display: inline-block;
+}
+
+.loginInput > div {
+    display: block;
+    margin: 10px 0px 10px 0px;
+}
+
+.entrySubmits button {
+    min-width: 150px;
+}
+
+#loginError {
+    color: red;
+}
